# roctools

./: CMakeLists.txt  LICENSE  README.md
conda-recipes/llvmdev_amdgcn/: build.sh  meta.yaml
conda-recipes/roctools/: build.sh  meta.yaml
include/: rocmlite.hh
rocmlite/: CMakeLists.txt  rocmlite.cpp
rocmlite/test/: CMakeLists.txt  test_rocmlite.cpp  test_rocmlite_functions.cpp
rocmlite/test/resources/: demo_ir.ll  test_suppressions.supp
